--- a/package.json
+++ b/package.json
@@ -4,23 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "rm -rf build & gulp webpack"
+    "dev": "babel-node server/app.js",
+    "build": "gulp build"
   },
   "author": "johan",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "express": "^4.16.3",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "run-sequence": "^2.2.1",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-stream": "^4.0.3"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-router": "^4.3.1"
   }
 }
