--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "node-sass": "^4.9.0",
     "run-sequence": "^2.2.1",
     "sass-loader": "^7.0.3",
@@ -32,8 +36,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "echarts": "^4.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router": "^4.3.1"
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2"
   }
 }
