--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -22,22 +23,29 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "file-loader": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.19.0",
     "node-sass": "^4.9.0",
+    "react-loadable": "^5.5.0",
     "run-sequence": "^2.2.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.12.0",
+    "webpack-api-mocker": "^1.5.15",
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-stream": "^4.0.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^3.3.7",
     "classnames": "^2.2.6",
     "echarts": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "mobx": "^5.1.0",
     "mobx-react": "^5.2.5",
     "prop-types": "^15.6.2",
