--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-loadable": "^5.5.0",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2"
   }
